# tox-ltt

./: .gitignore  CONTRIBUTING.rst  README.rst  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: docs.yml  lint.yml  publish.yml  publishable.yml  tests.yml
docs/source/: conf.py  index.rst  installation.rst
tests/: conftest.py  test_plugin.py  test_smoke.py
tox_ltt/: plugin.py
