[metadata]
name = tox_ltt
platforms = any
description = Install PyTorch distributions with light-the-torch
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = light-the-torch, pytorch, cuda, pip, install, tox, plugin
url = https://github.com/pmeier/tox-ltt
author = Philip Meier
author-email = github.pmeier@posteo.de
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
project_urls =
    Source = https://github.com/pmeier/tox-ltt
    Tracker = https://github.com/pmeier/tox-ltt/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    light-the-torch >= 0.3.3
    tox

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
tox =
    tox_ltt=tox_ltt.plugin
